# uva-digital-methods-webhistory-assignment

./: .gitignore  README.md  grab_all.sh  grab_url.js  package-lock.json  pyproject.toml  urls.txt
src/: main.py  resize.py  utils.py
